--- a/resources/style.css
+++ b/resources/style.css
@@ -35,13 +35,10 @@ body {
 .new {
 	width: 20rem;
 	background-color: black;
-	padding-left: 3rem;
-	padding-top: 2rem;
+	padding: 2rem 3rem;
 	top: 9rem;
 	position: relative;
 
-
-	
 }
 
 .new h4 {
