--- a/resources/style.css
+++ b/resources/style.css
@@ -38,17 +38,77 @@ body {
 	padding: 2rem 3rem;
 	top: 9rem;
 	position: relative;
-
+	font-weight: bold;
 }
 
 .new h4 {
 	font-size: 1rem;
-	font-weight: bold;
 	margin-bottom: 0.25rem;
 }
 
-
 .new h3 {
 	font-size: 2rem;
-	font-weight: bold;
+	
+}
+
+.nav {
+	background-color: firebrick;
+	padding: 0.75rem 0rem;
+
+}
+
+ul {
+	display: flex;
+	justify-content: space-between;
+}
+
+.products {
+	
+
+}
+.items {
+	display: flex;
+	justify-content: space-between;
+
+	
+}
+
+.item {
+	width: 30%;
+	border: 4px solid black;
+	text-align: center;
+	margin-top: 3rem;
+}
+
+.item img {
+	height: 9rem;
+	padding: 2rem 0rem;
+
+}
+
+.item p {
+	background-color: black;
+	padding: 0.5rem 0rem;
+}
+
+.information {
+	margin-top: 3rem;
+	margin-bottom: 4rem;
+	display: flex;
+	justify-content: space-between;
+}
+
+.info {
+	width: 35%;
+
+}
+
+.box {
+	background-color: black;
+	padding: 1rem 2rem;
+}
+
+
+.info p {
+	color: black;
 }
