--- a/resources/style.css
+++ b/resources/style.css
@@ -7,6 +7,7 @@ body {
 
 .container {
 	width: 960px;
+	margin: auto;
 }
 
 .header {
@@ -81,6 +82,11 @@ ul {
 	padding: 2rem 0rem;
 
 }
+
+#sunglasses {
+	width: 50%;
+}
+
 
 .item p {
 	background-color: black;
