--- a/resources/style.css
+++ b/resources/style.css
@@ -196,8 +196,9 @@ ul {
 
 	} 
 	
-	.box {
+	.info {
 		width: 90%;
+		margin: 0.5rem auto;
 
 	}
 
@@ -205,27 +206,11 @@ ul {
 		display: block;
 	}
 
-	.box .hours {
-		margin-top: 0.5rem;
-	}
-
-
+	
 
 	.footer {
 		text-align: center;
 	}
 
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
